--- a/WH_Capacity/app/Resources/views/base.html.twig
+++ b/WH_Capacity/app/Resources/views/base.html.twig
@@ -17,8 +17,8 @@
                 <a class="navbar-item is-tab {{ app.request.requestUri == path('items') ? 'is-active' }}" href="{{ path('items') }}">
                     Items
                 </a>
-                <a class="navbar-item is-tab {{ app.request.requestUri == path('items') ? 'is-active' }}" href="{{ path('items') }}">
-                    Also Items
+                <a class="navbar-item is-tab {{ app.request.requestUri == path('forecastOrders') ? 'is-active' }}" href="{{ path('forecastOrders') }}">
+                    Forecast Orders
                 </a>
             </div>
             <div class="navbar-burger">
