Redesigned the database entities

--- a/WH_Capacity/app/Resources/views/default/forecastorders.html.twig
+++ b/WH_Capacity/app/Resources/views/default/forecastorders.html.twig
@@ -22,7 +22,7 @@
             <tbody>
             {% for forecastOrder in forecastOrders %}
                 <tr>
- 					<td>{{ forecastOrders.owner }}</td>                   
+ 					<td>{{ forecastOrders.owner.name }}</td>
 					<td>{{ forecastOrders.id }}</td>
                     <td>{{ forecastOrders.itemCode }}</td>
                     <td>{{ forecastOrders.ShippedDate }}</td>
