--- a/WH_Capacity/app/Resources/views/default/items.html.twig
+++ b/WH_Capacity/app/Resources/views/default/items.html.twig
@@ -23,7 +23,7 @@
             {% for item in items %}
                 <tr>
                     <td>{{ item.id }}</td>
-					<td>{{ item.owner }}</td>
+					<td>{{ item.owner.name }}</td>
                     <td>{{ item.code }}</td>
                     <td>{{ item.description }}</td>
                     <td>{{ item.length }}</td>
